Spacing fix

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ html, body, body * {
         display: none;
     }
     #content {
-        margin-left: 325px;
+        margin-left: 350px;
         max-width: 600px;
         padding: 1em 1em 1em 1em;
     }
